k8s/ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nextjs-portfolio
  namespace: nextjs-portfolio
  annotations:
    kubernetes.io/ingress.class: "haproxy"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - codecrafter.space
    secretName: codecrafter-space-tls
  rules:
  - host: codecrafter.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-nextjs-portfolio
            port:
              number: 3000
